# PhishLens

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
docs/: THREAT_MODEL.md
src/phishlens/: __init__.py  app.py  cli.py  models.py
src/phishlens/auth/: __init__.py  alignment.py  dkim_verify.py  dns.py  results.py
src/phishlens/data/: __init__.py  brands.py
src/phishlens/enrich/: __init__.py  domain_age.py  rdap.py
src/phishlens/heuristics/: __init__.py  attachments.py  auth_findings.py  headers_anomaly.py  identity.py  links_heuristics.py  typosquat.py
src/phishlens/ingest/: __init__.py  eml.py
src/phishlens/parsers/: __init__.py  attachments.py  headers.py  links.py  mime.py
src/phishlens/report/: __init__.py  json_renderer.py  markdown_renderer.py
src/phishlens/scoring/: __init__.py  config.py
src/phishlens/util/: __init__.py  (+2 more)
tests/: test_attachments.py  test_auth.py  test_brands.py  test_cli.py  test_dkim_verify.py  test_domain_age.py  test_heuristics.py  test_identity_backfill.py  test_ingest.py  test_models.py  test_report.py  test_scoring.py  test_skeleton.py
tests/fixtures/: README.md  attach_archive.eml  attach_macro.eml  attach_mismatch.eml  attach_noext.eml  auth_fail.eml  auth_misaligned.eml  auth_pass.eml  auth_subdomain.eml  benign_plain.eml  brand_combosquat.eml  brand_display_spoof.eml  brand_tldswap.eml  brand_typosquat.eml  dangerous_attachment.eml  encoded_subject.eml  ident_replyto.eml  link_ip.eml  link_mismatch.eml  link_punycode.eml  link_shortener.eml  link_subdomain.eml  no_auth.eml  spoof_displayname.eml
(+3 files in other folders)
